--- a/notebooks/skl2onnx00_quisckstart.ipynb
+++ b/notebooks/skl2onnx00_quisckstart.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "RandomForestClassifier()"
+       "KNeighborsClassifier()"
       ]
      },
      "execution_count": 1,
@@ -30,11 +30,14 @@
     "from sklearn.datasets import load_iris\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
     "iris = load_iris()\n",
     "X, y = iris.data, iris.target\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y)\n",
-    "clr = RandomForestClassifier()\n",
+    "# clr = RandomForestClassifier()\n",
+    "clr = KNeighborsClassifier()\n",
+    "\n",
     "clr.fit(X_train, y_train)"
    ]
   },
@@ -52,7 +55,8 @@
     "initial_type = [('float_input', FloatTensorType([None, 4]))]\n",
     "onx = convert_sklearn(clr, initial_types=initial_type)\n",
     "\n",
-    "filename = '../models/rf_iris.onnx'\n",
+    "# filename = '../models/rf_iris.onnx'\n",
+    "filename = '../models/knn_iris.onnx'\n",
     "with open(filename, \"wb\") as f:\n",
     "    f.write(onx.SerializeToString())"
    ]
@@ -85,8 +89,8 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 1, 2, 0, 0, 2, 0, 0, 2, 1, 2, 2, 1, 1, 2, 2, 1, 0, 1, 1, 2, 2,\n",
-       "       0, 1, 0, 0, 2, 2, 0, 0, 1, 1, 0, 2, 0, 2, 1, 1], dtype=int64)"
+       "array([2, 2, 1, 1, 0, 2, 1, 1, 1, 2, 2, 1, 2, 1, 0, 2, 1, 2, 1, 0, 1, 2,\n",
+       "       1, 2, 0, 2, 0, 2, 1, 1, 2, 0, 2, 1, 1, 2, 0, 2], dtype=int64)"
       ]
      },
      "execution_count": 4,
@@ -107,8 +111,8 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 1, 2, 0, 0, 2, 0, 0, 2, 1, 2, 2, 1, 1, 2, 2, 1, 0, 1, 1, 2, 2,\n",
-       "       0, 1, 0, 0, 2, 2, 0, 0, 1, 1, 0, 2, 0, 2, 1, 1])"
+       "array([2, 2, 1, 1, 0, 2, 1, 1, 1, 2, 2, 1, 2, 1, 0, 2, 1, 2, 1, 0, 1, 2,\n",
+       "       1, 2, 0, 2, 0, 2, 1, 1, 2, 0, 2, 1, 1, 2, 0, 2])"
       ]
      },
      "execution_count": 5,
@@ -139,29 +143,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "6927cbc1-bbcc-486e-bf36-da29bac83f04",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Converting optimized ONNX model C:\\Users\\weldl\\Workspace\\onnx-android-ml-pipeline\\models\\rf_iris.onnx to ORT format model C:\\Users\\weldl\\Workspace\\onnx-android-ml-pipeline\\models\\rf_iris.all.ort\n",
-      "Converted 1 models. 0 failures.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-10-11 10:51:37,368 ort_format_model.utils [INFO] - Processed C:\\Users\\weldl\\Workspace\\onnx-android-ml-pipeline\\models\\rf_iris.all.ort\n",
-      "2021-10-11 10:51:37,368 ort_format_model.utils [INFO] - Created config in C:\\Users\\weldl\\Workspace\\onnx-android-ml-pipeline\\models\\rf_iris.all.required_operators.config\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "! python -m onnxruntime.tools.convert_onnx_models_to_ort \"../models/rf_iris.onnx\""
+    "# ! python -m onnxruntime.tools.convert_onnx_models_to_ort \"../models/rf_iris.onnx\"\n",
+    "! python -m onnxruntime.tools.convert_onnx_models_to_ort \"../models/knn_iris.onnx\""
    ]
   },
   {
