--- a/notebooks/skl2onnx00_quisckstart.ipynb
+++ b/notebooks/skl2onnx00_quisckstart.ipynb
@@ -143,10 +143,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "6927cbc1-bbcc-486e-bf36-da29bac83f04",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converting optimized ONNX model C:\\Users\\weldl\\Workspace\\onnx-android-ml-pipeline\\models\\knn_iris.onnx to ORT format model C:\\Users\\weldl\\Workspace\\onnx-android-ml-pipeline\\models\\knn_iris.all.ort\n",
+      "Converted 1 models. 0 failures.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-10-11 11:02:03,341 ort_format_model.utils [INFO] - Processed C:\\Users\\weldl\\Workspace\\onnx-android-ml-pipeline\\models\\knn_iris.all.ort\n",
+      "2021-10-11 11:02:03,342 ort_format_model.utils [INFO] - Created config in C:\\Users\\weldl\\Workspace\\onnx-android-ml-pipeline\\models\\knn_iris.all.required_operators.config\n"
+     ]
+    }
+   ],
    "source": [
     "# ! python -m onnxruntime.tools.convert_onnx_models_to_ort \"../models/rf_iris.onnx\"\n",
     "! python -m onnxruntime.tools.convert_onnx_models_to_ort \"../models/knn_iris.onnx\""
